# kircast_desktop

./: .gitignore  Cargo.toml  build.rs
ffplay/: ffplay.c
src/: lib.rs  log_conf.rs  main.rs
src/airplay/: ffmpeg_audio.rs  ffmpeg_sdl.rs  mod.rs
src/audio/: mod.rs  sample.rs  sample_rate.rs
src/ffp/: mod.rs
