[package]
edition = "2021"
name = "kircast_desktop"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airplay2-protocol = { path = "../airplay-protocol" }
anyhow = "1.0.71"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
ffmpeg-next = { version = "6", features = ["default"] }
ffmpeg-sys-next = { version = "6", features = ["default"] }
sdl2 = "0.35"
crossbeam = "0.8"
cpal = { version = "0.15" }

[dependencies.windows-sys]
features = ["Win32_System_Power"]
version = "0.48"

[build-dependencies]
cc = "1"

[build-dependencies.pkg-config]
version = "0.3"

[target."cfg(target_env = \"msvc\")".build-dependencies.vcpkg]
version = "0.2"

[profile.dev]
overflow-checks = false
