[package]
edition = "2021"
name = "kircast_desktop"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airplay2-protocol = { git = "https://github.com/horou-dsk/airplay-protocol.git" }
anyhow = "1.0.71"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
ffmpeg-next = { version = "7", features = ["default"] }
ffmpeg-sys-next = { version = "7", features = ["default"] }
sdl2 = "0.37"
crossbeam = "0.8"
cpal = { version = "0.15" }
dasp = { version = "0.11", features = [
  "signal",
  "ring_buffer",
  "interpolate-sinc",
  "interpolate",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
log-panics = { version = "2", features = ["with-backtrace"] }
smallvec = "1.13"
ringbuf = "0.4.1"

[dependencies.windows-sys]
features = ["Win32_System_Power"]
version = "0.48"

[build-dependencies]
cc = "1"

[build-dependencies.pkg-config]
version = "0.3"

[target."cfg(target_env = \"msvc\")".build-dependencies.vcpkg]
version = "0.2"

[profile.dev]
overflow-checks = false
